@@ -28,6 +28,7 @@ Engine fixes:
 * Fix leaked animation when Power entire power was redefined.
 * Fix power.target_neighbor not using the starting_pos as the origin point.
 * Fixed crash in Power tooltips when base_damage was not defined.
+* Fix incorrect power level being shown in the action bar tooltips for upgraded powers.
 
 Game updates:
 * Limited the number of "unique" items that can drop from a boss to 1 per kill.
